fixed slant overflow problem

--- a/_includes/scss/mobile.scss
+++ b/_includes/scss/mobile.scss
@@ -69,6 +69,9 @@
     dd {
       width: 70%;
     }
+    &::before, &::after {
+      display: none;
+    }
   }
   .collage {
     .left, .right {
